test_data/typeerror/pandas-22072.py
values = values._values
cat = Categorical(values, ordered=True)